--- a/src/Pages/InicioPage/inicio.css
+++ b/src/Pages/InicioPage/inicio.css
@@ -7,7 +7,7 @@
 .container {
   width: 100vw;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 12px;
   align-items: center;
   align-content: center;
