--- a/src/index.css
+++ b/src/index.css
@@ -18,39 +18,104 @@ body {
 #root {
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
     gap: 15px;
 }
 
 .btn {
+    width: 200px;
+    display: grid;
+    grid-template-columns: 150px 50px;
+    grid-template-rows: 50px 50px;
+    align-content: center;
+    align-items: center;
     margin-top: 5px;
+    margin-left: 20px;
+    padding: 5px;
+    gap: 5px;
 }
 
-.item-add-button {
+.product-add-button {
     background-color: #5cb85c;
     border-radius: 5px;
     color: #fff;
     border: none;
-    font-size: 11px;
+    font-size: 15px;
     cursor: pointer;
-    height: 20px;
+    height: 40px;
+    width: 120px;
+    grid-column: 1/3;
+    grid-row: 1/3;
+    margin-left: 50px;
 
 }
 
-.item-minus-button {
+.product-minus-button {
     background-color: #d9534f;
     border-radius: 5px;
     color: #fff;
     border: none;
-    font-size: 11px;
+    font-size: 12px;
     cursor: pointer;
+    width: 100px;
+    height: 30px;
+    display: block;
+    grid-column: 1/2;
+    grid-row: 2/3;
 }
 
-.item-plus-button {
+.product-plus-button {
     background-color: #337ab7;
     border-radius: 5px;
     color: #fff;
     border: none;
     font-size: 11px;
     cursor: pointer;
+    width: 100px;
+    height: 30px;
+    display: block;
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+.product-quantity {
+    color: #fff;
+    background-color: #f0ad4e;
+    display: flex;
+    justify-content: center;
+    border-radius: 15px;
+    width: 50px;
+    grid-column: 2/3;
+    grid-row: 1/3;
+    align-self: center;
+}
+
+.cart-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    width: 400px;
+    height: 250px;
+    margin: 30px 450px;
+    background-color: white;
+    color: black;
+    grid-column: 2/3;
+
+}
+
+.btn-container {
+    width: 100%;
+    position: absolute;
+    bottom: 15px;
+    left: 0;
+}
+
+.btn-checkout {
+    color: white;
+    font-size: 15px;
+    background-color: #5cb85c;
+    width: 120px;
+    height: 50px;
+    border-radius: 5px;
+    margin-top: 15px;
 }
