se mejora la UI de la ShopPage

--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,9 @@ body {
 
 #root {
     width: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
 }
 
 .btn {
@@ -91,23 +91,24 @@ body {
 }
 
 .cart-container {
-    position: relative;
+    flex-basis: 20rem;
+    flex-grow: 1;
+    flex-wrap: wrap;
+    gap: 1rem;
     display: flex;
+    flex-direction: row;
     justify-content: center;
     width: 400px;
-    height: 250px;
+    min-height: 100%;
     margin: 30px 450px;
     background-color: white;
     color: black;
-    grid-column: 2/3;
 
 }
 
 .btn-container {
     width: 100%;
-    position: absolute;
-    bottom: 15px;
-    left: 0;
+    flex-grow: 1;
 }
 
 .btn-checkout {
@@ -118,4 +119,18 @@ body {
     height: 50px;
     border-radius: 5px;
     margin-top: 15px;
+}
+
+.ProductsCart {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    flex-basis: 10rem;
+    flex-grow: 1;
+    max-width: 95%;
+    border: 1px solid black;
+    margin-top: 5px;
+    margin-left: 10px;
 }
