--- a/src/index.css
+++ b/src/index.css
@@ -113,12 +113,13 @@ body {
 
 .btn-checkout {
     color: white;
-    font-size: 15px;
+    font-size: 12px;
     background-color: #5cb85c;
     width: 120px;
     height: 50px;
     border-radius: 5px;
     margin-top: 15px;
+    cursor: pointer;
 }
 
 .ProductsCart {
